images distorted problem solved

--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -28,7 +28,6 @@ margin-left: 4px;
 }
 .itemdetails{
 display: flex;
-margin-right: 8px;
 }
 .itemtext{
     width: 146px;
