--- a/src/Pages/Home/Products/Cloth.css
+++ b/src/Pages/Home/Products/Cloth.css
@@ -1,8 +1,6 @@
 .product{
-    width: 386px;
-height: 444px;
 padding: 16px;
-margin-bottom: 10px;
+margin-bottom: 30px;
 background: #FFFFFF;
     box-shadow: 5px solid rgb(24, 23, 23);
 }
@@ -46,19 +44,16 @@ color: #8D8F9A;
 }
 img{
     width: 100%;
-height: 338px;
+height: 100%;
 margin-inline: auto;
 
 }
-.productname{
+.clothproductname{
     font-family: 'Raleway';
 font-style: normal;
 font-size: 18px;
-
-display: flex;
-align-items: center;
-
 color: #1D1F22;
+margin-bottom: 5px;
 }
 .outofStockproductname{
     font-family: 'Raleway';
@@ -74,6 +69,7 @@ font-size: 18px;
 color: #1D1F22;
 }
 .outpricearea{
+    margin-top: 10px;
     font-family: 'Raleway';
 font-style: normal;
 font-weight: 500;
@@ -81,15 +77,16 @@ font-size: 18px;
 
 color: #8D8F9A;
 }
+
 .textarea{
-    width: 354px;
+    margin-top: 5px;
 height: 29px;
 color: #FFFFFF;
 font-weight: 300;
 font-size: 18px;
 }
 .outofStocktextarea{
-    width: 354px;
+    margin-top: 5px;
     height: 29px;
     color: #8D8F9A;
     font-weight: 300;
