--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -22,7 +22,6 @@ justify-content: space-evenly
     margin-bottom: 24px;
 }
 .productImage{
-    height:500px;
     margin-right:50px
 }
 .detailsgroup{
